--- a/app/src/main/res/layout/param_configurator_null.xml
+++ b/app/src/main/res/layout/param_configurator_null.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="NULL"
-        android:padding="5dp"/>
+        android:padding="5dp"
+        android:id="@+id/paramconfigurator_null_title"/>
 
     <CheckBox
         android:id="@+id/param_configurator_null_checkbox"
