update readme and improve logic added intent selector feature added packagenames feature improve performance use new logo

--- a/app/src/main/res/layout/activity_fuzzer_console.xml
+++ b/app/src/main/res/layout/activity_fuzzer_console.xml
@@ -15,6 +15,6 @@
         android:background="@android:color/black"
         android:textColor="@android:color/white"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"
         />
+    <!--         android:transcriptMode="alwaysScroll"-->
 </LinearLayout>
